# YatinVeda

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose-ssl.yml  docker-compose.yml  kubernetes-deployment-example.yaml  our_test_results.txt  test_results.txt
backend/: .env.example  Dockerfile  alembic.ini  alembic.temp.ini  bcrypt.py  config.py  database.py  database_config.py  entrypoint.sh  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0276d5c46c01_initial_schema.py  034100221389_add_database_indexes.py  0ed3d82eb5ae_add_community_and_prescription_models.py  445283214546_add_unique_constraints.py  (+8 more)
backend/middleware/: __init__.py  audit_trail.py  caching.py  compression.py  csrf_protection.py  error_handlers.py  file_upload.py  metrics.py  prometheus_metrics.py  rate_limit_storage.py  rate_limit_tiers.py  rate_limiter.py  rate_limiting.py  redis_cache.py  redis_storage.py  request_logging.py  security_headers.py  security_monitor.py  tracing.py
backend/models/: __init__.py  database.py  schemas.py
backend/modules/: admin_auth.py  astrology_engine.py  auth.py  billing_events.py  bootstrap_admin.py  certificate_manager.py  email_service.py  email_templates.py  email_utils.py  email_verification.py  entitlements.py  mfa.py  prescription_generator.py  production_security.py  razorpay_integration.py  remedy_engine.py  role_based_access.py  security_testing.py  session_manager.py  stripe_integration.py  veda_mind.py
backend/schemas/: dual_registration.py  validation.py
backend/scripts/: init_admin.py  seed_data.py
backend/services/: currency_service.py  practitioner_service.py  search_service.py  user_service.py  verification_service.py
backend/tests/: conftest.py  test_admin_verification.py  test_advanced_rate_limiter.py  test_auth.py  test_authentication_compatibility.py  test_backend_integration.py  test_billing_admin_observability.py  test_billing_webhook_events.py  test_calculations.py  test_certificate_manager.py  test_certificate_properties.py  test_chat.py  test_community.py  test_cookies_endpoints.py  test_core_features_simple.py  test_csrf_protection_properties.py  test_direct_import.py  test_dual_registration_properties.py  test_file_upload.py  test_gdpr_endpoints.py  test_guru_booking.py  test_health_endpoints.py  test_import.py  test_integration_dual_registration.py  test_integration_new_endpoints.py  test_jwt_token_claims.py  test_mfa_endpoints.py  test_model_relationships.py  test_optional_field_handling.py  test_payments.py  test_pdf_generator.py  test_performance_dual_registration.py  test_practitioner_portal.py  test_practitioner_validation.py  test_prescriptions.py  test_production_security_properties.py  test_profile_management.py  test_rate_limiting_properties.py  test_rate_limits.py  test_registration_validation.py  (+25 more)
(+194 files in other folders)
