[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yatinveda-backend"
version = "1.0.0"
description = "A hybrid AI-assisted Vedic Astrology Intelligence Platform"
authors = [{name = "YatinVeda Team", email = "team@yatinveda.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.1",
    "bcrypt>=4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "reportlab>=4.0.4",
    "sendgrid>=6.10.0",
    "razorpay>=1.3.0",
    "apscheduler>=3.10.4",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
    "redis>=5.0.1",
    "pydantic>=2.5.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3.post1",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "ollama>=0.1.7",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.2",
    "pillow>=10.1.0",
    "cryptography>=41.0.8",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "tox>=4.6.4",
    "virtualenv>=20.23.0",
    "pip-tools>=7.3.0",
    "bandit>=1.7.5",
    "safety>=2.4.0b1"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["backend"]
known_third_party = ["fastapi", "sqlalchemy", "alembic", "pydantic", "uvicorn", "pytest", "requests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["stubs"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]